--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,13 +13,13 @@ jobs:
 
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Generate Snake Game from a GitHub user
-        uses: Platane/snk@v2
+        uses: Platane/snk@v2.0.1
         with:
           github_user_name: sakshisaraswat09
-          svg_out_path: dist/snake.svg
+          outputs: dist/snake.svg
 
       - name: Push Snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v2.1.3
